{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 18,
  "lineage": "ea10faa3-a094-12e3-6485-7af3500ce8c8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hub1_waf_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub1-public/providers/Microsoft.Network/publicIPAddresses/hub1-waf-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.217.211.235",
            "ip_version": "IPv4",
            "location": "israelcentral",
            "name": "hub1-waf-public-ip",
            "resource_group_name": "rg-hub1-public",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.hub1_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "hub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub1-public/providers/Microsoft.Network/routeTables/hub1-route-table",
            "location": "israelcentral",
            "name": "hub1-route-table",
            "resource_group_name": "rg-hub1-public",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub1_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "hub2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub2-private/providers/Microsoft.Network/routeTables/hub2-route-table",
            "location": "israelcentral",
            "name": "hub2-route-table",
            "resource_group_name": "rg-hub2-private",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub2_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub1_fw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub1-public/providers/Microsoft.Network/virtualNetworks/vnet-hub1-public/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub1-public",
            "virtual_network_name": "vnet-hub1-public"
          },
          "dependencies": [
            "azurerm_resource_group.hub1_rg",
            "azurerm_virtual_network.hub1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub2_fw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub2-private/providers/Microsoft.Network/virtualNetworks/vnet-hub2-private/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub2-private",
            "virtual_network_name": "vnet-hub2-private"
          },
          "dependencies": [
            "azurerm_resource_group.hub2_rg",
            "azurerm_virtual_network.hub2_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub1_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6b7f9a13-642c-4280-99c1-ec90e12f568c",
            "id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub1-public/providers/Microsoft.Network/virtualNetworks/vnet-hub1-public",
            "location": "israelcentral",
            "name": "vnet-hub1-public",
            "resource_group_name": "rg-hub1-public"
          },
          "dependencies": [
            "azurerm_resource_group.hub1_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub2_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "dc679e1c-40a6-45b9-a467-4799dcc6cfb1",
            "id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub2-private/providers/Microsoft.Network/virtualNetworks/vnet-hub2-private",
            "location": "israelcentral",
            "name": "vnet-hub2-private",
            "resource_group_name": "rg-hub2-private"
          },
          "dependencies": [
            "azurerm_resource_group.hub2_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub1_to_hub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub1-public/providers/Microsoft.Network/virtualNetworks/vnet-hub1-public/virtualNetworkPeerings/hub1-to-hub2-peering",
            "name": "hub1-to-hub2-peering",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub2-private/providers/Microsoft.Network/virtualNetworks/vnet-hub2-private",
            "resource_group_name": "rg-hub1-public",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub1-public"
          },
          "dependencies": [
            "azurerm_resource_group.hub1_rg",
            "azurerm_resource_group.hub2_rg",
            "azurerm_virtual_network.hub1_vnet",
            "azurerm_virtual_network.hub2_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub2_to_hub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub2-private/providers/Microsoft.Network/virtualNetworks/vnet-hub2-private/virtualNetworkPeerings/hub2-to-hub1-peering",
            "name": "hub2-to-hub1-peering",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e7028c49-efd1-4a16-a3ba-3bf1e8790f5d/resourceGroups/rg-hub1-public/providers/Microsoft.Network/virtualNetworks/vnet-hub1-public",
            "resource_group_name": "rg-hub2-private",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub2-private"
          },
          "dependencies": [
            "azurerm_resource_group.hub1_rg",
            "azurerm_resource_group.hub2_rg",
            "azurerm_virtual_network.hub1_vnet",
            "azurerm_virtual_network.hub2_vnet"
          ]
        }
      ]
    }
  ]
}